fix(core): CHECKOUT-000 Improve error message contrast for accessibility (#2340)

--- a/packages/core/src/scss/settings/global/color/_color.scss
+++ b/packages/core/src/scss/settings/global/color/_color.scss
@@ -38,8 +38,8 @@ $color-highlightDarker:             darken($color-highlight, 25%);
 // States
 // -----------------------------------------------------------------------------
 
-$color-error:                       #ed6a6a;
-$color-errorLight:                  #fbeeee;
+$color-error:                       #d12727;
+$color-errorLight:                  #f8e8e8;
 
 $color-info:                        #5f5f5f;
 $color-infoLight:                   #f5f5f5;
@@ -81,4 +81,4 @@ $color-orderVerificationRequired:   #e89fae;
 //
 // -----------------------------------------------------------------------------
 
-$color-errorLighter:                #fffafa;
+$color-errorLighter:                #fdf5f5;
